--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ a:hover{
 	nav{font-size:12px;}
 	.nav{font-size:25px;}
     h1 {font-size: 50px;}
-    footer{font-size:25px;}
+    footer p{font-size:20px;}
     .bio p{font-size:25px;}
     h2{font-size:40px;}
 }
